[gd_scene load_steps=3 format=1]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://car.tscn" type="PackedScene" id=2]

[node name="Node2D" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Car1" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( 523.12, 206.655 )

[node name="Car2" parent="." instance=ExtResource( 2 )]

editor/display_folded = true
transform/pos = Vector2( 1485.92, 201.36 )

[node name="ResetButton" type="Button" parent="."]

process/pause_mode = 2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 9.0
margin/top = 10.0
margin/right = 168.0
margin/bottom = 60.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Reset"
flat = false

[node name="PauseButton" type="Button" parent="."]

process/pause_mode = 2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 182.0
margin/top = 11.0
margin/right = 341.0
margin/bottom = 61.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Pause"
flat = false

[node name="MoveLeftButton" type="Button" parent="."]

process/pause_mode = 2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 657.0
margin/top = 15.0
margin/right = 816.0
margin/bottom = 65.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "<"
flat = false

[node name="MoveRightButton" type="Button" parent="."]

process/pause_mode = 2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 842.0
margin/top = 15.0
margin/right = 1001.0
margin/bottom = 65.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = ">"
flat = false

[node name="Car1TargetSpeed" type="HSlider" parent="."]

process/pause_mode = 2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 110.0
margin/top = 97.0
margin/right = 442.0
margin/bottom = 113.0
range/min = 0.0
range/max = 1000.0
range/step = 50.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = true
tick_count = 20
ticks_on_borders = true
focus_mode = 2

[node name="Value" type="Label" parent="Car1TargetSpeed"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -94.0
margin/top = -5.0
margin/right = -18.0
margin/bottom = 25.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Car2TargetSpeed" type="HSlider" parent="."]

process/pause_mode = 2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 481.0
margin/top = 97.0
margin/right = 813.0
margin/bottom = 113.0
range/min = -1000.0
range/max = 0.0
range/step = 0.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = true
tick_count = 20
ticks_on_borders = true
focus_mode = 2

[node name="Value" type="Label" parent="Car2TargetSpeed"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 344.0
margin/top = -4.0
margin/right = 427.0
margin/bottom = 25.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed" from="ResetButton" to="." method="_on_ResetButton_pressed"]

[connection signal="pressed" from="PauseButton" to="." method="_on_PauseButton_pressed"]

[connection signal="pressed" from="MoveLeftButton" to="." method="_on_MoveLeftButton_pressed"]

[connection signal="pressed" from="MoveRightButton" to="." method="_on_MoveRightButton_pressed"]

[connection signal="value_changed" from="Car1TargetSpeed" to="." method="_on_Car1TargetSpeed_value_changed"]

[connection signal="value_changed" from="Car2TargetSpeed" to="." method="_on_Car2TargetSpeed_value_changed"]


